--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shimmer: ^3.0.0
+  flutter_staggered_grid_view: ^0.7.0
+  flutter_svg: ^2.0.14
+  get: ^4.6.6
+  floating_bottom_bar: ^0.0.3
+  flutter_speed_dial: ^7.0.0
+  flutter_animate: ^4.5.0
 
 dev_dependencies:
   flutter_test:
@@ -60,8 +66,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/gif/
+    - assets/Icon/
+    - assets/logo/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -75,11 +83,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: SFProText
+      fonts:
+        - asset: assets/fonts/SFProText-Regular.ttf
+          weight: 300
+
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
